deploy: 0f46cde9742e45727da35caefdcc2036d9a3067a

--- a/jogo-template.html
+++ b/jogo-template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carregando Jogo... | PlayU</title>
-    <link rel="stylesheet" href="/assets/css/style.3a106c79.css">
+    <link rel="stylesheet" href="/assets/css/style.0f46cde9.css">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
 </head>
 <body>
@@ -49,8 +49,8 @@
                 <h2 class="section-title" style="text-align:center; border:none; margin-bottom:1rem;">Galeria</h2>
                 <div id="carousel-container" class="game-carousel-wrapper">
                     <div class="game-carousel-track" id="game-carousel-track"></div>
-                    <button class="carousel-btn prev-slide" id="btn-prev-photo">&#10094;</button>
-                    <button class="carousel-btn next-slide" id="btn-next-photo">&#10095;</button>
+                    <button class="nav-btn" id="btn-prev-photo">&#10094;</button>
+                    <button class="nav-btn" id="btn-next-photo">&#10095;</button>
                 </div>
             </div>
 
@@ -106,9 +106,9 @@
 
     <script>
         const version = new Date().getTime();
-        document.write(`<script src="/assets/js/data-manager.3a106c79.js?v=${version}"><\/script>`);
-        document.write(`<script src="/assets/js/game-page.3a106c79.js?v=${version}"><\/script>`);
-        document.write(`<script src="/assets/js/main.3a106c79.js?v=${version}"><\/script>`); 
+        document.write(`<script src="/assets/js/data-manager.0f46cde9.js?v=${version}"><\/script>`);
+        document.write(`<script src="/assets/js/game-page.0f46cde9.js?v=${version}"><\/script>`);
+        document.write(`<script src="/assets/js/main.0f46cde9.js?v=${version}"><\/script>`); 
     </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
