atualização do dashboard e da página inicial

--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
             <div class="nav__right-group">
                 <ul class="nav__links right"></ul>
                 
-                <div class="nav__controls">
-                    <a href="login.html" class="submit-btn small-btn danger-btn" id="login-btn" data-lang-key="login">Login</a>
-                    
+                <div class="nav__controls">                    
                     <div class="theme-switcher">
-                        <ion-icon name="sunny-outline" id="theme-toggle"></ion-icon>
+                        <ion-icon name="sunny-outline" id="theme-toggle" style="cursor: pointer;"></ion-icon>
                     </div>
                 </div>
             </div>
