--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>play.u Live Entertainment</title>
     <link rel="icon" href="assets/images/logo.png" type="image/png">
-    <script src="assets/js/version.0f46cde9.js"></script>
+    <script src="assets/js/version.79ce2603.js"></script>
     <script>
         function loadAsset(path) {
             const version = typeof SITE_VERSION !== 'undefined' ? SITE_VERSION : new Date().getTime();
@@ -31,11 +31,9 @@
             <div class="nav__right-group">
                 <ul class="nav__links right"></ul>
                 
-                <div class="nav__controls">
-                    <a href="login.html" class="submit-btn small-btn danger-btn" id="login-btn" data-lang-key="login">Login</a>
-                    
+                <div class="nav__controls">                    
                     <div class="theme-switcher">
-                        <ion-icon name="sunny-outline" id="theme-toggle"></ion-icon>
+                        <ion-icon name="sunny-outline" id="theme-toggle" style="cursor: pointer;"></ion-icon>
                     </div>
                 </div>
             </div>
@@ -271,10 +269,10 @@
     </script>
 
     <script>
-        loadAsset('assets/css/style.0f46cde9.css');
-        loadAsset('assets/js/data-manager.0f46cde9.js'); 
-        loadAsset('assets/js/translations.0f46cde9.js');
-        loadAsset('assets/js/main.0f46cde9.js');
+        loadAsset('assets/css/style.79ce2603.css');
+        loadAsset('assets/js/data-manager.79ce2603.js'); 
+        loadAsset('assets/js/translations.79ce2603.js');
+        loadAsset('assets/js/main.79ce2603.js');
     </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
