--- a/sala-host.html
+++ b/sala-host.html
@@ -71,7 +71,7 @@
             <div class="sidebar-header" style="flex-direction: column; align-items: flex-start; gap: 10px;">
                 <div style="display: flex; justify-content: space-between; width: 100%; align-items: center;">
                     <h3 style="margin:0;">Painel Mestre</h3>
-                    <button id="reopen-invite-btn" class="sidebar-icon-btn" title="Ver Link de Convite">
+                    <button id="copy-invite-btn" class="sidebar-icon-btn" title="Ver Link de Convite">
                         <ion-icon name="link-outline"></ion-icon>
                     </button>
                 </div>
@@ -108,6 +108,13 @@
         <div id="host-audio-list"></div>
     </div>
 
+    <div class="master-volume-control" style="background: rgba(0,0,0,0.4); padding: 15px; border-radius: 8px; border: 1px solid #444; margin-bottom: 20px; display: flex; align-items: center; gap: 15px;">
+    <ion-icon name="volume-high-outline" style="color: var(--secondary-color); font-size: 1.8rem;"></ion-icon>
+    <div style="flex: 1;">
+        <label style="font-size: 0.85rem; color: #aaa; display: block; margin-bottom: 5px; font-weight: bold;">Volume Geral Vídeos</label>
+        <input type="range" id="master-volume-slider" min="0" max="1" step="0.05" value="1" style="width: 100%; cursor: pointer;" oninput="window.adjustMasterVolume(this.value)">
+    </div>
+</div>
     <div class="media-section">
         <h4 style="color:#aaa; font-size:0.8rem; margin-bottom:10px; text-transform:uppercase; border-bottom:1px solid #333; padding-bottom:5px;">
             <ion-icon name="videocam"></ion-icon> Vídeos & Cenas
