--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <div class="carousel-track" id="carousel-track">
         </div>
 
-    <button class="carousel-btn prev-btn" onclick="moveCarousel(-1)" style="position: absolute; top: 50%; left: 20px; transform: translateY(-50%); z-index: 10; background: rgba(0,0,0,0.5); border: none; color: white; font-size: 2rem; cursor: pointer;">&#10094;</button>
-    
-    <button class="carousel-btn next-btn" onclick="moveCarousel(1)" style="position: absolute; top: 50%; right: 20px; transform: translateY(-50%); z-index: 10; background: rgba(0,0,0,0.5); border: none; color: white; font-size: 2rem; cursor: pointer;">&#10095;</button>
+    <button class="carousel-control prev" onclick="window.prevSlide()" style="position: absolute; top: 50%; left: 20px; transform: translateY(-50%); z-index: 10; background: rgba(0,0,0,0.5); border: none; color: white; font-size: 2rem; cursor: pointer; padding: 5px 15px; border-radius: 8px;">&#10094;</button>
+
+    <button class="carousel-control next" onclick="window.nextSlide()" style="position: absolute; top: 50%; right: 20px; transform: translateY(-50%); z-index: 10; background: rgba(0,0,0,0.5); border: none; color: white; font-size: 2rem; cursor: pointer; padding: 5px 15px; border-radius: 8px;">&#10095;</button>
 
     <div class="carousel-dots" id="carousel-dots" style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); z-index: 10; display: flex; gap: 10px;"></div>
 </section>
