--- a/sala-host.html
+++ b/sala-host.html
@@ -115,13 +115,30 @@
         <input type="range" id="master-volume-slider" min="0" max="1" step="0.05" value="1" style="width: 100%; cursor: pointer;" oninput="window.adjustMasterVolume(this.value)">
     </div>
 </div>
-    <div class="media-section">
-        <h4 style="color:#aaa; font-size:0.8rem; margin-bottom:10px; text-transform:uppercase; border-bottom:1px solid #333; padding-bottom:5px;">
-            <ion-icon name="videocam"></ion-icon> Vídeos & Cenas
-        </h4>
-        <div id="host-video-list"></div>
+    <div style="margin-bottom: 25px;">
+    <h4 style="color: var(--secondary-color); margin-bottom: 10px; display:flex; align-items:center; gap:8px;">
+        <ion-icon name="musical-notes-outline"></ion-icon> Músicas e Efeitos
+    </h4>
+    <div id="host-audio-list">
+        </div>
+</div>
+
+<div style="margin-bottom: 25px;">
+    <h4 style="color: var(--secondary-color); margin-bottom: 10px; display:flex; align-items:center; gap:8px;">
+        <ion-icon name="videocam-outline"></ion-icon> Vídeos Animados
+    </h4>
+    <div id="host-video-list">
+        </div>
+</div>
+
+<div style="margin-bottom: 10px;">
+    <h4 style="color: var(--secondary-color); margin-bottom: 10px; display:flex; align-items:center; gap:8px;">
+        <ion-icon name="image-outline"></ion-icon> Fotos e Cenários
+    </h4>
+    <div id="host-image-list">
+        </div>
+</div>
     </div>
-            </div>
 
             <div id="tab-decisions" class="sidebar-content">
                 <div id="host-decisions-list" class="assets-list">
