--- a/sala-host.html
+++ b/sala-host.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sala do Host - PlayU</title>
     
-    <link rel="stylesheet" href="assets/css/style.8f3f5b8c.css">
+    <link rel="stylesheet" href="assets/css/style.d791c90b.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -17,7 +17,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
 
     <script src="assets/js/firebase-config.js"></script>
-    <script src="assets/js/main.8f3f5b8c.js"></script>
+    <script src="assets/js/main.d791c90b.js"></script>
 </head>
 <body class="host-room-body">
 
@@ -115,13 +115,30 @@
         <input type="range" id="master-volume-slider" min="0" max="1" step="0.05" value="1" style="width: 100%; cursor: pointer;" oninput="window.adjustMasterVolume(this.value)">
     </div>
 </div>
-    <div class="media-section">
-        <h4 style="color:#aaa; font-size:0.8rem; margin-bottom:10px; text-transform:uppercase; border-bottom:1px solid #333; padding-bottom:5px;">
-            <ion-icon name="videocam"></ion-icon> Vídeos & Cenas
-        </h4>
-        <div id="host-video-list"></div>
+    <div style="margin-bottom: 25px;">
+    <h4 style="color: var(--secondary-color); margin-bottom: 10px; display:flex; align-items:center; gap:8px;">
+        <ion-icon name="musical-notes-outline"></ion-icon> Músicas e Efeitos
+    </h4>
+    <div id="host-audio-list">
+        </div>
+</div>
+
+<div style="margin-bottom: 25px;">
+    <h4 style="color: var(--secondary-color); margin-bottom: 10px; display:flex; align-items:center; gap:8px;">
+        <ion-icon name="videocam-outline"></ion-icon> Vídeos Animados
+    </h4>
+    <div id="host-video-list">
+        </div>
+</div>
+
+<div style="margin-bottom: 10px;">
+    <h4 style="color: var(--secondary-color); margin-bottom: 10px; display:flex; align-items:center; gap:8px;">
+        <ion-icon name="image-outline"></ion-icon> Fotos e Cenários
+    </h4>
+    <div id="host-image-list">
+        </div>
+</div>
     </div>
-            </div>
 
             <div id="tab-decisions" class="sidebar-content">
                 <div id="host-decisions-list" class="assets-list">
@@ -188,7 +205,7 @@
         <div id="media-content-area" style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;"></div>
     </div>
 
-    <script src="assets/js/sala-host.8f3f5b8c.js"></script>
+    <script src="assets/js/sala-host.d791c90b.js"></script>
 </body>
 <div id="rotate-device-overlay">
     <div class="rotate-content">
